--- a/Portail.html
+++ b/Portail.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html class="dégradé1">
+<html class="degrade1">
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link rel="stylesheet" href="CSSGeneral.css">
+    <link type="text/css" rel="stylesheet" href="CSSGeneral.css">
     <meta charset="utf-8"/>
 </head>
 
 <body>
-
+<div class="corps0">
     <div class="slogan">
         <h1 id="slogan1"> Pour faire de l'engagement une valeur ! </h1>
         <img src="Images/logo1.png" alt="Image : Jeunes 6.4">
         <h2 id="slogan2"> ...l'expression d'un potentiel, la promesse d'une richesse ! </h2>
     </div>
-    <br/><br/>
-    <br/><br/>
     <div id="portail">
-        <a href="Accueil2.html" id="entrée"> ENTRER </a>
+        <a href="Presentation.html" id="entree"> ENTRER </a>
     </div>
+</div>
     <div class="pieddepage">
         <p class="paragraphepieddepage">
             JEUNES 6.4 est un dispositif de valorisation de l'engagement des jeunes en Pyrénées-Atlantiques soutenu par l'État, le Conseil Général, le Conseil Régional, les CAF Béarn Soule et Pays Basque, la MSA, la CPAM. 
