--- a/Presentation.html
+++ b/Presentation.html
@@ -11,8 +11,8 @@
 <body>
 
     <div class="entete">
-        <img src="Images/logo1.png" class="imageentete">
-        <h1 class="titreentete"> Pour faire de l'engagement une valeur </h1>
+        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
+        <p id="titreentete3"> Pour faire de l'engagement une valeur </p>
     </div>
 
     <div id="menu">
@@ -26,7 +26,9 @@
         <div id="texte1">
             <div id="tiers1">
                 <h2 class="pasdemargebottom"> De quoi s’agit-il ? </h2>
-                <p class="pasdemargetop"> D’une opportunité : celle qu’un engagement quel qu’il soit puisse être considéré à sa juste valeur ! Toute expérience est source d’enrichissement et doit être reconnue largement. Elle révèle un potentiel, l’expression d’un savoir-être à concrétiser. </p>
+                <p class="pasdemargetop pasdemargebottom"> D’une opportunité : celle qu’un engagement quel qu’il soit puisse être considéré à sa juste valeur ! </p>
+                <p class="pasdemargetop2 pasdemargebottom">Toute expérience est source d’enrichissement et doit être reconnue largement.</p>
+                <p class="pasdemargetop2">Elle révèle un potentiel, l’expression d’un savoir-être à concrétiser.</p>
             </div>
             <div id="tiers2">
                  <h2 class="pasdemargebottom"> A qui s'adresse-t-il ? </h2>
