--- a/Partenaires.html
+++ b/Partenaires.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="entete">
-        <img src="Images/logo1.png" class="imageentete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
         <h1 id="titreentete1"> PARTENAIRES </h1>
     </div>
 
@@ -17,7 +17,7 @@
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
         <div id="quart3" > <a href="Consultant.html" id="lien3"> CONSULTANT </a></div>
-        <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
+        <div id="quart8" > <a href="Partenaires.html" id="lien8"> PARTENAIRES </a> </div>
     </div>
 
     <div id="corps2">
