--- a/Partenaires.html
+++ b/Partenaires.html
@@ -2,25 +2,25 @@
 <html>
 <head>
     <title> Nos Partenaires - Jeunes 6.4</title>
-    <link rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="Partenaires.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
-<body>
+<body class="nomargin">
 
-    <div class="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
-        <h1 id="titreentete1"> PARTENAIRES </h1>
+    <div id="entete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <h1 id="titreentete"> PARTENAIRES </h1>
     </div>
 
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
         <div id="quart3" > <a href="Consultant.html" id="lien3"> CONSULTANT </a></div>
-        <div id="quart8" > <a href="Partenaires.html" id="lien8"> PARTENAIRES </a> </div>
+        <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
-    <div id="corps2">
+    <div id="corps">
         <div id="phrase1">
             <p> JEUNES 6.4 est un dispositif issu de la <a href="http://test.le64.fr/uploads/tx_arccg64/charte2013.pdf" id="charte"> charte de l'engagement </a> pour la jeunesse signée en 2013 par des partenaires institutionnels...</p>
         </div>
