--- a/Portail.html
+++ b/Portail.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<html class="degrade1">
+<html id="degrade">
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link type="text/css" rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link type="text/css" rel="stylesheet" href="Portail.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
-<body>
-<div class="corps0">
-    <div class="slogan">
-        <h1 id="slogan1"> Pour faire de l'engagement une valeur ! </h1>
-        <img src="Images/logo1.png" alt="Image : Jeunes 6.4">
-        <h2 id="slogan2"> ...l'expression d'un potentiel, la promesse d'une richesse ! </h2>
-    </div>
-    <div id="portail">
+<body class="nomargin">
+    <div id="corps" class="nomargin">
+
+        <h1  class="nomargin" id="slogan1"> Pour faire de l'engagement une valeur ! </h1>
+        <img id="image" src="Images/logo1.png" alt="Image : Jeunes 6.4">
+        <h2  class="nomargin" id="slogan2"> ...l'expression d'un potentiel, la promesse d'une richesse ! </h2>
         <a href="Presentation.html" id="entree"> ENTRER </a>
+    
     </div>
-</div>
-    <div class="pieddepage">
-        <p class="paragraphepieddepage">
+    <div id="pieddepage">
+        <p id="paragraphepieddepage">
             JEUNES 6.4 est un dispositif de valorisation de l'engagement des jeunes en Pyrénées-Atlantiques soutenu par l'État, le Conseil Général, le Conseil Régional, les CAF Béarn Soule et Pays Basque, la MSA, la CPAM. 
         </p>
     </div>
