--- a/Referent.html
+++ b/Referent.html
@@ -2,27 +2,33 @@
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="Referent.css">
+    <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body class="nomargin">
 
-    <div class="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
-        <h1 id="titreentete4"> RÉFÉRENT </h1>
-        <p id="titreentete3"> Je confirme la valeur de ton engagement </p>
+    <div id="entete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <h1 id="titreentete1"> RÉFÉRENT </h1>
+        <p id="titreentete2"> Je confirme la valeur de ton engagement </p>
     </div>
 
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
-        <div id="quart6" > <a href="Referent.html" id="lien6"> RÉFÉRENT </a></div>
+        <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
         <div id="quart3" > <a href="Consultant.html" id="lien3"> CONSULTANT </a></div>
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
-    <div id="corps2">
-        <img id="fond1" src="Images/logo3.JPG">
+    <div id="corps">
+        <img id="fond" src="Images/logo3.JPG">
+        <div id="texte">
+            <p> Avec JEUNES 6.4, vous pouvez désormais référencer les jeunes avec qui vous avez collaboré et attester leurs compétences. Ils profiteront de cette certification dans leur recherche d'emploi.</p>
+            <p> Vous n'avez rien à faire ! Il vous suffit de recevoir une demande de certification par mail d'un des jeunes concernés et vous devrez seulement remplir le formulaire attestant témoignant de ses compétences. Ni compte à créér, ni procédure particulère ne sont nécéssaires pour utiliser nos services. </p>
+            <p> Nos ingénieurs spécialisés dans la création de sites web ont travaillé d'arrache-pied pour que l'utilisation de JEUNES 6.4 soit la plus simple pour vous, alors n'attendez plus !</p>
+            <p id="special"> <b>Commencez dès maintenant à valider l'expérience des jeunes de votre entourage !</b> </p>
+        </div>
     </div>
 
 
