--- a/Consultant.html
+++ b/Consultant.html
@@ -2,29 +2,34 @@
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="Consultant.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
-<body>
+<body class="nomargin">
 
-    <div class="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
-        <h1 id="titreentete5"> CONSULTANT </h1>
-        <p id="titreentete3"> Je donne de la valeur à ton engagement </p>
+    <div id="entete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <h1 id="titreentete1"> CONSULTANT </h1>
+        <p id="titreentete2"> Je donne de la valeur à ton engagement </p>
     </div>
 
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
-        <div id="quart7" > <a href="Consultant.html" id="lien7"> CONSULTANT </a></div>
+        <div id="quart3" > <a href="Consultant.html" id="lien3"> CONSULTANT </a></div>
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
-    <div id="corps2">
-        <img id="fond1" src="Images/logo4.JPG">
+    <div id="corps">
+        <img id="fond" src="Images/logo4.JPG">
+        <div id="texte">
+            <p>  JEUNES 6.4 permet aux recruteurs d'accéder à des profils de jeunes certifiés en recherche d'emploi. Les références sont validées personnellement par les experts de leur domaine. </p>
+            <p> Vous n'avez rien à faire ! Il vous suffit de recevoir les références d'un des jeunes concernés par mail. Ni compte à créér, ni procédure particulère ne sont nécéssaires pour utiliser nos services. </p>
+            <p> Nos ingénieurs spécialisés dans la création de sites web ont travaillé d'arrache-pied pour que l'utilisation de JEUNES 6.4 soit la plus simple pour vous, alors n'attendez plus !</p>
+            <p id="special"> <b>Facilitez-vous la recherche de talents avec JEUNES 6.4 !</b> </p>
+        </div>
     </div>
-
 
 </body>
 </html>
