--- a/Jeune.html
+++ b/Jeune.html
@@ -2,28 +2,28 @@
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="Jeune.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
-<body>
+<body class="nomargin">
 
-    <div class="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
-        <h1 id="titreentete2"> JEUNE </h1>
-        <p id="titreentete3"> Je donne de la valeur à mon engagement </p>
+    <div id="entete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <h1 id="titreentete1"> JEUNE </h1>
+        <p id="titreentete2"> Je donne de la valeur à mon engagement </p>
     </div>
 
     <div id="menu">
-        <div id="quart5" > <a href="Jeune.html" id="lien5"> JEUNE </a> </div>
+        <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
         <div id="quart3" > <a href="Consultant.html" id="lien3"> CONSULTANT </a></div>
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
-    <div id="corps2">
-        <img id="fond1" src="Images/logo2.JPG">
-        <div id="texte2">
+    <div id="corps">
+        <img id="fond" src="Images/logo2.JPG">
+        <div id="texte">
             <p> Si vous êtes un jeune des Pyrénées-Atlantiques, JEUNES 6.4 vous aidera à valoriser vos compétences auprès de futurs collaborateurs !</p>
             <p> Faites le point sur votre savoir-faire et contactez facilement ceux qui vous ont vu à l'œuvre. Par le biais d'une demande de référence validée par un mentor ou collègue, vous pouvez prouver à n'importe qui que vous avez les compétences.</p>
             <p> Nos ingénieurs spécialisés dans la création de sites web ont travaillé d'arrache-pied pour que l'utilisation de JEUNES 6.4 soit la plus simple pour vous, alors n'attendez plus ! ;)</p>
@@ -35,7 +35,7 @@
                 <a href="Inscription.html" id="lien9"> S'INSCRIRE </a>
             </div>
             <div id="moitie8">
-                <a href="Connexion.html" id="lien10"> SE CONNECTER </a>
+                <a href="Connexion.html" id="lien10"> CONNEXION </a>
             </div>
         </div>
     </div>
