--- a/Presentation.html
+++ b/Presentation.html
@@ -2,17 +2,17 @@
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
-    <link type="text/css" rel="stylesheet" href="CSSGeneral.css">
-    <meta charset="utf-8"/>
+    <link type="text/css" rel="stylesheet" href="Presentation.css">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 
    
 </head>
 
-<body>
+<body class="nomargin">
 
-    <div class="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" class="imageentete"> </a>
-        <p id="titreentete3"> Pour faire de l'engagement une valeur </p>
+    <div id="entete">
+        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <p id="titreentete"> Pour faire de l'engagement une valeur </p>
     </div>
 
     <div id="menu">
@@ -22,8 +22,8 @@
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
-    <div id="corps1">
-        <div id="texte1">
+    <div id="corps">
+        <div id="texte">
             <div id="tiers1">
                 <h2 class="pasdemargebottom"> De quoi s’agit-il ? </h2>
                 <p class="pasdemargetop pasdemargebottom"> D’une opportunité : celle qu’un engagement quel qu’il soit puisse être considéré à sa juste valeur ! </p>
@@ -31,19 +31,19 @@
                 <p class="pasdemargetop2">Elle révèle un potentiel, l’expression d’un savoir-être à concrétiser.</p>
             </div>
             <div id="tiers2">
-                 <h2 class="pasdemargebottom"> A qui s'adresse-t-il ? </h2>
-                 <p class="pasdemargetop"> A vous, jeunes entre 16 et 30 ans, qui vous êtes investis spontanément dans une association ou dans tout type d’action formelle ou informelle, et qui avez partagé de votre temps, de votre énergie, pour apporter un soutien, une aide, une compétence.</p>
-                 <p> A vous, responsables de structures ou référents d’un jour, qui avez croisé la route de ces jeunes et avez bénéficié même ponctuellement de cette implication citoyenne ! C’est l’occasion de vous engager à votre tour pour ces jeunes en confirmant leur richesse pour en avoir été un temps les témoins mais aussi les bénéficiaires ! </p>
+                 <h2 class="pasdemargebottom"> À qui s'adresse-t-il ? </h2>
+                 <p class="pasdemargetop"> À vous, jeunes entre 16 et 30 ans, qui vous êtes investis spontanément dans une association ou dans tout type d’action formelle ou informelle, et qui avez partagé de votre temps, de votre énergie, pour apporter un soutien, une aide, une compétence.</p>
+                 <p> À vous, responsables de structures ou référents d’un jour, qui avez croisé la route de ces jeunes et avez bénéficié même ponctuellement de cette implication citoyenne ! C’est l’occasion de vous engager à votre tour pour ces jeunes en confirmant leur richesse pour en avoir été un temps les témoins mais aussi les bénéficiaires ! </p>
             </div>
             <div id="tiers3">
-                <p>  A vous, employeurs, recruteurs en ressources humaines, représentants d’organismes de formation, qui recevez ces jeunes, pour un emploi, un stage, un cursus de qualification, pour qui le savoir-être constitue le premier fondement de toute capacité humaine</p>
+                <p>  À vous, employeurs, recruteurs en ressources humaines, représentants d’organismes de formation, qui recevez ces jeunes, pour un emploi, un stage, un cursus de qualification, pour qui le savoir-être constitue le premier fondement de toute capacité humaine</p>
                 <p> Cet engagement est une ressource à valoriser au fil d'un parcours en 3 étapes : </p>
             </div>
         </div>
         <div id="etapes">
             <div id="etape1">
                 <div id="moitie1">
-                    <p class="pasdemargebottom"> 1ère étape </p>
+                    <p class="pasdemargebottom"> 1<sup>ère</sup> étape </p>
                     <p class="pasdemargetop">la valorisation</p>
                 </div>
                 <div id="moitie2">
@@ -52,7 +52,7 @@
             </div>
             <div id="etape2">
                 <div id="moitie3">
-                    <p class="pasdemargebottom"> 2ème étape </p>
+                    <p class="pasdemargebottom"> 2<sup>ème</sup> étape </p>
                     <p class="pasdemargetop">la confirmation</p>
                 </div>
                 <div id="moitie4">
@@ -62,7 +62,7 @@
             </div>
             <div id="etape3">
                 <div id="moitie5">
-                    <p class="pasdemargebottom"> 3ème étape</p>
+                    <p class="pasdemargebottom"> 3<sup>ème</sup> étape</p>
                     <p class="pasdemargetop">la consultation</p>
                 </div>
                 <div id="moitie6">
