--- a/Inscription.html
+++ b/Inscription.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE INSCRIPTION DU MODULE VISITEUR-->
 <html>
 <head>
     <title> Inscription - Jeunes 6.4</title>
     <link rel="stylesheet" href="Inscription.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
 
 <body class="nomargin">
-
+    <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
         <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> JEUNE </h1>
         <p id="titreentete2"> Je donne de la valeur à mon engagement </p>
     </div>
 
-
+    <!--La zone principale de la page.-->
     <div id="corps">
+
+        <!--Le fond de la page est la version "jeune" du logo de JEUNES 6.4-->
         <img id="fond" src="Images/logo2.JPG">
+
         <h1 id="titre"> Création de votre compte Jeune </h1>
+        
+        <!--Zone du formulaire d'inscription-->
         <div id=formulaire>
             <form method="post" action="Inscription.php">
                 <label for="nom">Nom :</label>
@@ -35,6 +42,7 @@
             </form>
         </div>
 
+        <!--Div utilisée pour rappeler à l'utilisateur qu'il peut se connecter s'il a un compte.-->
         <div id="rappelconnexion">
             <h2 id="phrase"> Vous avez déjà un compte ?</h2>
             <a href="Connexion.html" id="lienconnexion"> Accéder à votre espace</a>
