--- a/Partenaires.html
+++ b/Partenaires.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE PARTENAIRES DU MODULE VISITEUR-->
 <html>
 <head>
     <title> Nos Partenaires - Jeunes 6.4</title>
     <link rel="stylesheet" href="Partenaires.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body class="nomargin">
 
+    <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
         <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete"> PARTENAIRES </h1>
     </div>
 
+    <!--Le menu est une bande divisée en 4 parties égales (les "quarts" ci-dessous) qui contiennent chacune un lien.-->
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
@@ -20,6 +24,7 @@
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
+    <!--La zone principale de la page.-->
     <div id="corps">
         <div id="phrase1">
             <p> JEUNES 6.4 est un dispositif issu de la <a href="http://test.le64.fr/uploads/tx_arccg64/charte2013.pdf" id="charte"> charte de l'engagement </a> pour la jeunesse signée en 2013 par des partenaires institutionnels...</p>
