--- a/Portail.html
+++ b/Portail.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE PORTAIL DU MODULE VISITEUR-->
 <html id="degrade">
 <head>
     <title> Accueil - Jeunes 6.4</title>
     <link type="text/css" rel="stylesheet" href="Portail.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body class="nomargin">
-    <div id="corps" class="nomargin">
 
+    <!--La zone principale de la page.-->
+    <div id="corps" class="nomargin">
         <h1  class="nomargin" id="slogan1"> Pour faire de l'engagement une valeur ! </h1>
         <img id="image" src="Images/logo1.png" alt="Image : Jeunes 6.4">
         <h2  class="nomargin" id="slogan2"> ...l'expression d'un potentiel, la promesse d'une richesse ! </h2>
         <a href="Presentation.html" id="entree"> ENTRER </a>
-    
     </div>
+
+    <!--La zone du pied de page.-->
     <div id="pieddepage">
         <p id="paragraphepieddepage">
             JEUNES 6.4 est un dispositif de valorisation de l'engagement des jeunes en Pyrénées-Atlantiques soutenu par l'État, le Conseil Général, le Conseil Régional, les CAF Béarn Soule et Pays Basque, la MSA, la CPAM. 
         </p>
     </div>
-
-
 </body>
 </html>
