--- a/Consultant.html
+++ b/Consultant.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE CONSULTANT DU MODULE VISITEUR-->
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
     <link rel="stylesheet" href="Consultant.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body class="nomargin">
-
+    <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
         <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> CONSULTANT </h1>
         <p id="titreentete2"> Je donne de la valeur à ton engagement </p>
     </div>
 
+    <!--Le menu est une bande divisée en 4 parties égales (les "quarts" ci-dessous) qui contiennent chacune un lien.-->
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
@@ -21,7 +24,10 @@
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
+    <!--La zone principale de la page.-->
     <div id="corps">
+
+        <!--Le fond de la page est la version "consultant" du logo de JEUNES 6.4-->
         <img id="fond" src="Images/logo4.JPG">
         <div id="texte">
             <p>  JEUNES 6.4 permet aux recruteurs d'accéder à des profils de jeunes certifiés en recherche d'emploi. Les références sont validées personnellement par les experts de leur domaine. </p>
