--- a/Presentation.html
+++ b/Presentation.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE DE PRESENTATION DANS LE MODULE VISITEUR-->
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
     <link type="text/css" rel="stylesheet" href="Presentation.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
 
    
@@ -10,11 +12,13 @@
 
 <body class="nomargin">
 
+    <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
         <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
         <p id="titreentete"> Pour faire de l'engagement une valeur </p>
     </div>
 
+    <!--Le menu est une bande divisée en 4 parties égales (les "quarts" ci-dessous) qui contiennent chacune un lien.-->
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
@@ -22,7 +26,10 @@
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
+    <!--La zone principale de la page.-->
     <div id="corps">
+
+        <!--Le texte est une div divisée en 3 parties (les trois tiers).-->
         <div id="texte">
             <div id="tiers1">
                 <h2 class="pasdemargebottom"> De quoi s’agit-il ? </h2>
@@ -40,7 +47,11 @@
                 <p> Cet engagement est une ressource à valoriser au fil d'un parcours en 3 étapes : </p>
             </div>
         </div>
+
+        <!--Une div divisée en 3 (etape1,2,3). Chaque étape sera elle même divisée en 2 (deux moitiés).
+        Tout cela représente les boîtes qu'on peut voir sur la page.-->
         <div id="etapes">
+
             <div id="etape1">
                 <div id="moitie1">
                     <p class="pasdemargebottom"> 1<sup>ère</sup> étape </p>
@@ -50,6 +61,7 @@
                     <p>Décrivez votre expérience et mettez en avant ce que vous en avez retiré.</p>
                 </div>
             </div>
+
             <div id="etape2">
                 <div id="moitie3">
                     <p class="pasdemargebottom"> 2<sup>ème</sup> étape </p>
@@ -58,8 +70,8 @@
                 <div id="moitie4">
                     <p>Confirmez cette expérience et ce que vous avez pu constater au contact de ce jeune.</p>
                 </div>
-                
             </div>
+
             <div id="etape3">
                 <div id="moitie5">
                     <p class="pasdemargebottom"> 3<sup>ème</sup> étape</p>
@@ -68,7 +80,6 @@
                 <div id="moitie6">
                     <p>Validez cet engagement en prenant en compte sa valeur.</p>
                 </div>
-                
             </div>
         </div>
     </div>
