--- a/Referent.html
+++ b/Referent.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
+<!--HTML DE LA PAGE REFERENT DU MODULE VISITEUR-->
 <html>
 <head>
     <title> Accueil - Jeunes 6.4</title>
     <link rel="stylesheet" href="Referent.css">
+    <!--Les attributs name et content permettent ici d'utiliser les unités dynamiques vw,vh,vmin... dans le CSS-->
     <meta charset="utf-8"  name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body class="nomargin">
 
+    <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
         <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> RÉFÉRENT </h1>
         <p id="titreentete2"> Je confirme la valeur de ton engagement </p>
     </div>
 
+    <!--Le menu est une bande divisée en 4 parties égales (les "quarts" ci-dessous) qui contiennent chacune un lien.-->
     <div id="menu">
         <div id="quart1" > <a href="Jeune.html" id="lien1"> JEUNE </a> </div>
         <div id="quart2" > <a href="Referent.html" id="lien2"> RÉFÉRENT </a></div>
@@ -21,8 +25,12 @@
         <div id="quart4" > <a href="Partenaires.html" id="lien4"> PARTENAIRES </a> </div>
     </div>
 
+    <!--La zone principale de la page.-->
     <div id="corps">
+
+        <!--Le fond de la page est la version "référent" du logo de JEUNES 6.4-->
         <img id="fond" src="Images/logo3.JPG">
+        
         <div id="texte">
             <p> Avec JEUNES 6.4, vous pouvez désormais référencer les jeunes avec qui vous avez collaboré et attester leurs compétences. Ils profiteront de cette certification dans leur recherche d'emploi.</p>
             <p> Vous n'avez rien à faire ! Il vous suffit de recevoir une demande de certification par mail d'un des jeunes concernés et vous devrez seulement remplir le formulaire attestant témoignant de ses compétences. Ni compte à créér, ni procédure particulère ne sont nécéssaires pour utiliser nos services. </p>
