--- a/Jeune/Inscription.html
+++ b/Jeune/Inscription.html
@@ -12,7 +12,7 @@
 <body class="nomargin">
     <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <a href="../Visiteur/Presentation.html"> <img src="../Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> JEUNE </h1>
         <p id="titreentete2"> Je donne de la valeur à mon engagement </p>
     </div>
@@ -21,7 +21,7 @@
     <div id="corps">
 
         <!--Le fond de la page est la version "jeune" du logo de JEUNES 6.4-->
-        <img id="fond" src="Images/logo2.JPG">
+        <img id="fond" src="../Images/logo2.JPG">
 
         <h1 id="titre"> Création de votre compte Jeune </h1>
         
