--- a/Visiteur/Consultant.html
+++ b/Visiteur/Consultant.html
@@ -11,7 +11,7 @@
 <body class="nomargin">
     <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <a href="Presentation.html"> <img src="../Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> CONSULTANT </h1>
         <p id="titreentete2"> Je donne de la valeur à ton engagement </p>
     </div>
@@ -28,7 +28,7 @@
     <div id="corps">
 
         <!--Le fond de la page est la version "consultant" du logo de JEUNES 6.4-->
-        <img id="fond" src="Images/logo4.JPG">
+        <img id="fond" src="../Images/logo4.JPG">
         <div id="texte">
             <p>  JEUNES 6.4 permet aux recruteurs d'accéder à des profils de jeunes certifiés en recherche d'emploi. Les références sont validées personnellement par les experts de leur domaine. </p>
             <p> Vous n'avez rien à faire ! Il vous suffit de recevoir les références d'un des jeunes concernés par mail. Ni compte à créér, ni procédure particulère ne sont nécéssaires pour utiliser nos services. </p>
