--- a/Visiteur/Jeune.html
+++ b/Visiteur/Jeune.html
@@ -11,7 +11,7 @@
 <body class="nomargin">
     <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <a href="Presentation.html"> <img src="../Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> JEUNE </h1>
         <p id="titreentete2"> Je donne de la valeur à mon engagement </p>
     </div>
@@ -26,7 +26,7 @@
     <!--La zone principale de la page.-->
     <div id="corps">
         <!--Le fond de la page est la version "jeune" du logo de JEUNES 6.4-->
-        <img id="fond" src="Images/logo2.JPG">
+        <img id="fond" src="../Images/logo2.JPG">
 
         <div id="texte">
             <p> Si vous êtes un jeune des Pyrénées-Atlantiques, JEUNES 6.4 vous aidera à valoriser vos compétences auprès de futurs collaborateurs !</p>
@@ -38,10 +38,10 @@
         <!--Deux boutons créés avec des liens qui mènent aux pages d'inscription et de connexion.-->
         <div id="boutons">
             <div id="moitie7">
-                <a href="Inscription.html" id="lien9"> S'INSCRIRE </a>
+                <a href="../Jeune/Inscription.html" id="lien9"> S'INSCRIRE </a>
             </div>
             <div id="moitie8">
-                <a href="Connexion.html" id="lien10"> CONNEXION </a>
+                <a href="../Jeune/Connexion.html" id="lien10"> CONNEXION </a>
             </div>
         </div>
     </div>
