--- a/Visiteur/Portail.html
+++ b/Visiteur/Portail.html
@@ -13,7 +13,7 @@
     <!--La zone principale de la page.-->
     <div id="corps" class="nomargin">
         <h1  class="nomargin" id="slogan1"> Pour faire de l'engagement une valeur ! </h1>
-        <img id="image" src="Images/logo1.png" alt="Image : Jeunes 6.4">
+        <img id="image" src="../Images/logo1.png" alt="Image : Jeunes 6.4">
         <h2  class="nomargin" id="slogan2"> ...l'expression d'un potentiel, la promesse d'une richesse ! </h2>
         <a href="Presentation.html" id="entree"> ENTRER </a>
     </div>
