--- a/Visiteur/Presentation.html
+++ b/Visiteur/Presentation.html
@@ -14,7 +14,7 @@
 
     <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <a href="Presentation.html"> <img src="../Images/logo1.png" id="imageentete"> </a>
         <p id="titreentete"> Pour faire de l'engagement une valeur </p>
     </div>
 
