--- a/Visiteur/Referent.html
+++ b/Visiteur/Referent.html
@@ -12,7 +12,7 @@
 
     <!--Une div qui correspond à l'entête des pages du site.-->
     <div id="entete">
-        <a href="Presentation.html"> <img src="Images/logo1.png" id="imageentete"> </a>
+        <a href="Presentation.html"> <img src="../Images/logo1.png" id="imageentete"> </a>
         <h1 id="titreentete1"> RÉFÉRENT </h1>
         <p id="titreentete2"> Je confirme la valeur de ton engagement </p>
     </div>
@@ -29,7 +29,7 @@
     <div id="corps">
 
         <!--Le fond de la page est la version "référent" du logo de JEUNES 6.4-->
-        <img id="fond" src="Images/logo3.JPG">
+        <img id="fond" src="../Images/logo3.JPG">
         
         <div id="texte">
             <p> Avec JEUNES 6.4, vous pouvez désormais référencer les jeunes avec qui vous avez collaboré et attester leurs compétences. Ils profiteront de cette certification dans leur recherche d'emploi.</p>
