--- a/Jeune/Inscription.html
+++ b/Jeune/Inscription.html
@@ -16,7 +16,7 @@
         <h1 id="titreentete1"> JEUNE </h1>
         <p id="titreentete2"> Je donne de la valeur à mon engagement </p>
     </div>
-
+    <div id="invisible"> </div> 
     <!--La zone principale de la page.-->
     <div id="corps">
 
