--- a/Jeune/Connexion.html
+++ b/Jeune/Connexion.html
@@ -17,10 +17,9 @@
     </div>
 
     <!--La zone principale de la page.-->
+    <div id="invisible"> </div>
     <div id="corps">
 
-        <!--Le fond de la page est la version "jeune" du logo de JEUNES 6.4-->
-        <img id="fond" src="../Images/logo2.JPG">
 
         <!--La zone du formulaire de connexion-->
         <div id="login">
